<resources>
    <string name="app_name">GpsTracker</string>
    <!-- bottom menu  -->
    <string name="home">Home</string>
    <string name="tracks">Tracks</string>
    <string name="settings">Settings</string>
    <!-- preference  -->
    <string name="update_time">Update time</string>
    <string name="update_time_summary">Location update time</string>
    <string name="location">Location</string>
    <string name="track_color">Track color</string>
    <string name="track_color_summary">Choose track color</string>
</resources>